syntax = "proto3";

option java_package = "de.uniba.rz.io.rpc";
option java_multiple_files = true;
option java_outer_classname = "TicketManagement";

option objc_class_prefix = "RTG";

message EntityRequest {
  EntityType entityType = 1;
}

message TicketRequest {
  string reporter = 1;
  string topic = 2;
  string description = 3;
  TicketType type = 4;
  TicketPriority priority = 5;
  TicketStatus status = 6;
}

message TicketResponse {
  int32 id = 1;
  string reporter = 2;
  string topic = 3;
  string description = 4;
  TicketType type = 5;
  TicketPriority priority = 6;
  TicketStatus status = 7;
}

message TicketIdRequest {
  int32 id = 1;
}

message TicketIdResponse {
  int32 id = 1;
}

message UpdateStatusRequest {
  int32 id = 1;
  TicketStatus status = 2;
}

message TicketUpdatedResponse {}


service TicketService{
  rpc Post(TicketRequest) returns (TicketIdResponse) {};
  rpc GetAll(EntityRequest) returns (stream TicketResponse);
  rpc Get(TicketIdRequest) returns (TicketResponse);
  rpc UpdateStatus(UpdateStatusRequest) returns (TicketUpdatedResponse);
}

enum TicketType {
  TASK = 0;
  ENHANCEMENT = 1;
  BUG = 2;
  QUESTION = 3;
}

enum TicketPriority{
  CRITICAL = 0;
  MAJOR = 1;
  MINOR = 2;
}

enum TicketStatus {
  NEW = 0;
  ACCEPTED = 1;
  REJECTED = 2;
  CLOSED = 3;
}

enum EntityType {
  TICKETS = 0;
}
